# First_Git_Repo

./: .gitignore  PythonSample.py  readme.txt  task1.py  task3_translate16.py  task5_translate_Morze.py  task6_re_search.py  task7_birthday_congrat.py  test.py
Old_projects/: db.sqlite3
example_joke/: main.py
goit-algo-hw-03/: task1-hw-03.py
goit-algo-hw-05/: task1_main_fibonacci.py  task2_generator.py  task4_bot.py  test23.py
goit-algo-hw-06/: hw_06_main.py  task_bot06.py  test10.py
goit-algo-hw-07/: task1_07_final _bot.py
goit-algo-hw-08/: task01_hw_08.py
goit-web-hw-02/Task_01_Poetry_Env/: hw.py  pyproject.toml
goit-web-hw-03/Task01/: main.py
goit-web-hw-03/Task02/: factorize_async.py  factorize_sync.py
goit-web-hw-05/: get_rates.py  pyproject.toml  test05.py
goit-web-hw-06/: connect.py  create.py  main.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
goit-web-hw-07/: config.ini  main.py  pyproject.toml  seeds.py
goit-web-hw-07/migrations/: env.py
goit-web-hw-07/migrations/versions/: 1c3b034eaf0e_init.py  3f65e5800d1b_init.py  5084b4078332_init.py  53f8e04560a6_init.py
goit-web-hw-08/: pyproject.toml
goit-web-hw-08/hw-01/: app.py  consumer.py  models.py
goit-web-hw-08/hw-02/: hw.py  models.py
goit-web-hw-09/: main.py  pyproject.toml  test.py
goit-web-hw-10/: pyproject.toml
goit-web-hw-10/hw_project/: db.sqlite3  test.py
goit-web-hw-11b/: main.py  pyproject.toml
goit-web-hw-11b/src/: schemas.py
goit-web-hw-11b/src/database/: db.py  (+1 more)
goit-web-hw-13a/: .env  .env.example  docker-compose.yml  main.py  pyproject.toml
goit-web-hw-13a/migrations/: env.py
goit-web-hw-13a/migrations/versions/: 33168d020644_add_verification.py  67778dd6298f_init.py  b9aa53f5c578_init.py
goit-web-hw-13a/postgres-data/: postmaster.pid
goit-web-hw-13a/postgres-data/base/13481/: pg_internal.init
goit-web-hw-13a/postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16399  16401  16403  16405  16411  16412  16414  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+3 more)
goit-web-hw-13a/postgres-data/global/: 1260  pg_control  pg_internal.init
goit-web-hw-13a/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
goit-web-hw-13a/src/: schemas.py
goit-web-hw-13a/src/conf/: config.py
goit-web-hw-13a/src/database/: db.py  models.py
goit-web-hw-13a/src/repository/: contacts.py  users.py
goit-web-hw-13a/src/routes/: auth.py  contacts.py  users.py
goit-web-hw-13a/src/services/: auth.py  email.py
goit-web-hw-13b/: pyproject.toml
goit-web-hw-13b/hw_project/: .env  db.sqlite3
goit-web-hw-13b/hw_project/hw_project/: settings.py  urls.py
goit-web-hw-13b/hw_project/quotes/: forms.py  models.py  urls.py
goit-web-hw-13b/hw_project/quotes/migrations/: 0001_initial.py  0004_user_delete_automobile_author_user.py  0006_alter_author_user.py  0008_user_alter_author_user.py  0010_alter_author_user_alter_quote_user_alter_tag_user.py
goit-web-hw-13b/hw_project/quotes/templates/quotes/: add_quote.html
goit-web-hw-13b/hw_project/quotes/templatetags/: extract.py
goit-web-hw-13b/hw_project/users/: admin.py  forms.py  urls.py  views.py
goit-web-hw-13b/hw_project/users/migrations/: 0001_initial.py  0003_initial.py
goit-web-hw-13b/hw_project/users/templates/users/: login.html  signup.html
goit-web-hw-13b/hw_project/utils/: add_quotes_to_mongo.py
web-goit-algo-hw-01/: hw.py
(+23 files in other folders)
