[tool.poetry]
name = "goit-web-hw-07"
version = "0.1.0"
description = ""
authors = ["Oleksandr Tesler <tesler_2000@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
