[tool.poetry]
name = "goit-web-hw-08"
version = "0.1.0"
description = ""
authors = ["Oleksandr Tesler <tesler_2000@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
mongoengine = "^0.29.1"
faker = "^30.6.0"
redis = "^5.1.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
