[tool.poetry]
name = "goit-web-hw-11b"
version = "0.1.0"
description = ""
authors = ["Oleksandr Tesler <tesler_2000@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.2"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
