[tool.poetry]
name = "y"
version = "0.1.0"
description = "home task 01 Module 2"
authors = ["Oleksandr Tesler <tesler_2000@yahoo.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
